--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.19"
   },
