--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/anhvu123456/blog_dev#readme",
   "dependencies": {
+    "bootstrap-icons": "^1.9.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "method-override": "^3.0.0",
